Modified view styles

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,25 @@
-* {
-    margin: 0;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video { 
+    margin: 0; 
     padding: 0;
-    font-family: "Courier New", Courier, monospace;
 }
 
 body {
     font-size: 1em;
     background-color: #EFEEED;
     color: #292828;
+    font-family: "Courier New", Courier, monospace;
 }
 
 h1 {
@@ -180,8 +192,8 @@ main {
     margin-bottom: .5em;
 }
 
-.blog-post .body, .comment-body {
-    font-family: Helvetica, sans-serif;
+.blog-post .body, .comment-body, aside {
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 1.15em;
 }
 
@@ -246,6 +258,11 @@ aside img {
 
 .hidden-block {
     display: none;
+}
+
+#freepik {
+    margin-top: 2%;
+    text-align: center;
 }
 
 @media (max-width: 500px) {
