--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,9 @@
         </header>
         <main>
             <div id="lastPostsLoader"></div>
-            <a href='http://www.freepik.com/free-vector/vector-robot-silhouettes-free-for-download_714901.htm'>Robot Graphics by Freepik</a>
             <aside class="hidden-block">
                 <% include ./partials/aside %>
+                <%- include ./partials/freepik.ejs %>
             </aside>
         </main>
 
