--- a/views/blog_view.ejs
+++ b/views/blog_view.ejs
@@ -13,7 +13,7 @@
                 <h3>Join the Discussion:</h3>
                 <%- include ./partials/comment_form %>
             </div>
-            <a href='http://www.freepik.com/free-vector/vector-robot-silhouettes-free-for-download_714901.htm'>Robot Graphics by Freepik</a>
+            <%- include ./partials/freepik.ejs %>
             <aside class="hidden-block">
                 <% include ./partials/aside %>
             </aside>
