--- a/views/partials/login_form.ejs
+++ b/views/partials/login_form.ejs
@@ -7,7 +7,7 @@
         </div>
         <div id="password-container">
             <label for="password">Password:</label>
-            <input type="text" name="password">
+            <input type="password" name="password">
         </div>
         <button type="submit" value="Submit">Login</button>
     </form>
