--- a/views/partials/signup_form.ejs
+++ b/views/partials/signup_form.ejs
@@ -10,7 +10,7 @@
         </div>
         <div id="password-container">
             <label for="password">Password:</label>
-            <input type="text" name="password">
+            <input type="password" name="password">
         </div>
         <button type="submit" value="Submit">Sign Up</button>
     </form>
