Disabled comment form unless user is authenticated

--- a/views/blog_view.ejs
+++ b/views/blog_view.ejs
@@ -18,8 +18,18 @@
                 <% include ./partials/aside %>
             </aside>
         </main>
+        <%if (isAuthenticated) {%>
+        <div class="enable"><div>
+            <%}%>
         <script type="text/javascript" src="/javascripts/ajax.js"></script>
         <script>
+            var checkEnabled = document.getElementsByClassName('enable');
+            if (checkEnabled.length === 1) {
+                var ed = document.getElementById('comment-editor');
+                ed.removeAttribute('disabled');
+                ed.value = '';
+            }
+
             var pathArray = window.location.pathname.split('/');
             var path = pathArray[3];
             Comments.getComments(path).done(function(result) {
