--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,17 +7,17 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video { 
-    margin: 0; 
+time, mark, audio, video {
+    margin: 0;
     padding: 0;
 }
 
 body {
     font-size: 1em;
-    background-color: #EFEEED;
+    /*background-color: #EFEEED;*/
     color: #292828;
     font-family: "Courier New", Courier, monospace;
 }
@@ -268,6 +268,12 @@ aside img {
 @media (max-width: 500px) {
     .login-container {
         display: none;
+    }
+}
+
+@media (max-width: 800px) {
+    header {
+        position: absolute;
     }
 }
 
