Justify blog body and comment body under 800px

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -275,6 +275,10 @@ aside img {
     header {
         position: absolute;
     }
+
+    .blog-post .body, .comment-body {
+        text-align: justify;
+    }
 }
 
 @media (min-width: 1119px) {
