Refactored js from views. Removed hover shadow from index

--- a/views/blog_view.ejs
+++ b/views/blog_view.ejs
@@ -22,24 +22,6 @@
         <div class="enable"><div>
             <%}%>
         <script type="text/javascript" src="/javascripts/ajax.js"></script>
-        <script>
-            var checkEnabled = document.getElementsByClassName('enable');
-            if (checkEnabled.length === 1) {
-                var ed = document.getElementById('comment-editor');
-                ed.removeAttribute('disabled');
-                ed.value = '';
-            }
-
-            var pathArray = window.location.pathname.split('/');
-            var path = pathArray[3];
-            Comments.getComments(path).done(function(result) {
-                Comments.renderComments(result);
-            })
-
-            var hr = document.getElementsByTagName('hr');
-            var blog_id_value = hr[0].getAttribute('id');
-            var form_input = document.getElementById('blog_id_input');
-            form_input.value = blog_id_value;
-        </script>
+        <script src="/javascripts/blog_view.js"></script>
     </body>
 </html>
