Fixed me_chair filename in css

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -249,7 +249,7 @@ aside h3 {
     margin-right: auto;
     margin-bottom: 2%;
     border-radius: 100px;
-    background: url('../images/me_chair.jpg') no-repeat;
+    background: url('../images/me_chair.JPG') no-repeat;
 }
 
 aside div.about {
