Changed aside styles on pages other than index.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,6 +11,7 @@
             <% include ./partials/login_form %>
             <aside class="hidden-block">
                 <% include ./partials/aside %>
+                <%- include ./partials/freepik.ejs %>
             </aside>
         </main>
     </body>
