--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -239,6 +239,7 @@ main {
 aside {
     text-align: center;
     margin-top: 2%;
+    margin-bottom: 8%;
     clear: both;
 }
 
@@ -267,15 +268,21 @@ aside div.about {
 #freepik {
     margin-top: 2%;
     text-align: center;
+    font-size: .7em;
 }
+
 
 @media (max-width: 500px) {
     .login-container {
         display: none;
     }
+
+    aside {
+        margin-top: 8%;
+    }
 }
 
-@media (min-width: 500px) and (max-width: 1600px) {
+@media (min-width: 510px) and (max-width: 1600px) {
     aside {
         position: relative;
     }
@@ -334,6 +341,8 @@ aside div.about {
         top: 0;
         margin-left: 9%;
         margin-right:5%;
+        margin-top: 0;
+        margin-bottom: 0;
         width: auto;
     }
 
