--- a/views/partials/aside.ejs
+++ b/views/partials/aside.ejs
@@ -1,3 +1,3 @@
 <h3>About Me</h3>
 <div id="my-picture"></div>
-<div class="about">I have been a teacher of guitar, German, math, science, and literature. Now I am on the path to become a web developer. Contact me at colinalford@gmail.com</div>
+<div class="about">I have been a teacher of guitar, German, math, science, and literature. Now I am on the path to become a web developer. Contact me at <a href="mailto:colinalford@gmail.com">colinalford@gmail.com</a></div>
