--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,6 +11,7 @@
             <% include ./partials/signup_form %>
             <aside class="hidden-block">
                 <% include ./partials/aside %>
+                <%- include ./partials/freepik.ejs %>
             </aside>
         </main>
     </body>
