--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -243,7 +243,7 @@ main {
 aside {
     position: relative;
     text-align: center;
-    background-color: #FCFCFC;
+    background-color: #F4F4F4;
     margin-top: 2%;
     margin-bottom: 8%;
     padding-bottom: 1%;
