--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,6 @@
 <title><%= title %></title>
 <meta name=viewport content="width=device-width, initial-scale=1">
+<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link rel='stylesheet' href='/stylesheets/style.css' />
 <script src="/javascripts/jquery-2.1.4.min.js"></script>
 <script src="/javascripts/ckeditor/ckeditor.js"></script>
