Fixed CSS syntax error on Open Sans font

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -198,7 +198,7 @@ main {
 }
 
 .blog-post .body, .comment-body, aside {
-    font-family: 'Open Sans' sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 1.15em;
 }
 
